# study_project

./: .gitignore  lv_conf.h  terminal_project.code-workspace
File/Tools/: send_image.py
GUI/test/: SquareLine_Project.sll  SquareLine_Project.slp  SquareLine_Project.spj  project.info
GUI/test/assets/FONT/: ui_font_myfont.c  ui_font_myfont.fcfg
GUI/test/mygui/: CMakeLists.txt  filelist.txt  project.info  protocol_parser.c  protocol_parser.h  time_display.c  time_display.h  ui.c  ui.h  ui_helpers.c  ui_helpers.h  weather_display.c  weather_display.h  wifi_config.c  wifi_config.h
GUI/test/mygui/images/: ui_img_image_duoyun_png.c  ui_img_image_qing_png.c  ui_img_image_xiaoyu_png.c
GUI/test/mygui/screens/: ui_Screen1.c  ui_Screen1.h  ui_Screen2.c  ui_Screen2.h  ui_Screen3.c  ui_Screen3.h  ui_Screen4.c  ui_Screen4.h
SYSTEM/usart/: usart.c  usart.h
SYSTEM/usart2/: usart2.c  usart2.h
USER/: Template.uvprojx  main.c  stm32f4xx_it.c
hardware/: key.c  key.h  lv_port_disp.c  lv_port_disp.h  mylcd.c  mylcd.h  oledfont.h  pic.h  touch.c  touch.h
lvgl/demos/widgets/assets/: img_clothes.c
